# oss-scout

./: .env.example  .gitignore  .mcp.json.example  CLAUDE.md  Dockerfile  LICENSE  README.md  cloudrun.yaml  pyproject.toml
.claude/agents/: scout-architect.md  scout-auditor.md  scout-builder.md  scout-integrator.md  scout-interviewer.md  scout-planner.md  scout-researcher.md  scout-reviewer.md
.claude/commands/: scout-build.md  scout-explain.md  scout-license.md  scout-merge.md  scout-plan.md  scout-quick.md  scout-scaffold.md  scout-team.md  scout-validate.md  scout.md
config/: license_policy.yaml  recipes.yaml
docs/: SPEC-v0.4.0.md  architecture.md  install.md  mcp-spec.md  security.md
server/: __init__.py  main.py  models.py  version.py
server/agents/: __init__.py  base.py  compatibility_agent.py  license_agent.py  quality_agent.py  security_agent.py
server/core/: github_client.py  license_check.py  local_cache.py  scoring.py
server/tools/: __init__.py  adapt_stack.py  batch.py  envcheck.py  explain.py  extract_component.py  feature_catalog.py  inject_feature.py  integration_check.py  license.py  merge_repos.py  preview.py  recipe.py  scaffold.py  search.py  search_feature.py  smart_scaffold.py  validate.py  validate_schema.py  wiring.py
server/tools/wiring_templates/: __init__.py  api_hook.py  auth_guard.py  db_crud.py  file_upload.py  form_handler.py  middleware.py  sse_stream.py  websocket.py
tests/: test_adapt_stack.py  test_agents.py  test_batch.py  test_envcheck.py  test_extract_component.py  test_inject_feature.py  test_integration_check.py  test_license.py  test_merge_repos.py  test_preview.py  test_recipe.py  test_scaffold.py  test_scoring.py  test_search_feature.py  test_smart_scaffold.py  test_validate_schema.py  test_wiring.py
