[project]
name = "oss-scout"
version = "0.4.0"
description = "MCP server that finds license-verified, quality-scored open-source boilerplates from GitHub"
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"
authors = [{name = "haemin123"}]
keywords = ["mcp", "github", "boilerplate", "scaffold", "open-source", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0,<2.0.0",
    "PyGithub>=2.0.0,<3.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "starlette>=0.36.0,<1.0.0",
    "uvicorn>=0.27.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-mock>=3.0.0,<4.0.0",
    "ruff>=0.3.0,<1.0.0",
    "mypy>=1.8.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/haemin123/oss-scout"
Repository = "https://github.com/haemin123/oss-scout"
Issues = "https://github.com/haemin123/oss-scout/issues"

[project.scripts]
oss-scout = "server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "T20", # flake8-print
    "SIM", # flake8-simplify
]
ignore = [
    "S101", # assert allowed in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require network access",
]
